--- a/blog/back/styles/sass/common.scss
+++ b/blog/back/styles/sass/common.scss
@@ -74,4 +74,11 @@ $padVals: 2,5,10,15,20;
 	}
 }
 
-
+/* btn*/
+.btn {
+	display: block;
+	text-align: center;
+	outline: none;
+	border:none;
+	color:#fff;
+}
