--- a/blog/back/styles/index.css
+++ b/blog/back/styles/index.css
@@ -150,6 +150,14 @@ ul, ol, li {
 .pt_20 {
   padding-top: 20px; }
 
+/* btn*/
+.btn {
+  display: block;
+  text-align: center;
+  outline: none;
+  border: none;
+  color: #fff; }
+
 /* page styles*/
 /** main*/
 html, body {
@@ -171,6 +179,19 @@ a {
     color: #333;
     text-decoration: none; }
 
+.trans-link {
+  display: inline-block;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  box-shadow: 0 0 1px transparent; }
+  .trans-link:hover, .trans-link:focus, .trans-link:active {
+    transform: scale(1.1) rotate(5deg);
+    -webkit-transform: scale(1.1) rotate(5deg); }
+
 .container {
   margin: 0 auto; }
 
@@ -178,7 +199,67 @@ a {
   width: 1150px; }
 
 .header {
-  height: 60px; }
+  border-bottom: 1px solid #eee;
+  height: 90px;
+  line-height: 90px; }
+  .header .logo {
+    margin-left: 20px;
+    font-weight: normal; }
+  .header .nav {
+    margin-right: 90px; }
+    .header .nav .nav-link {
+      display: inline-block; }
+
+.content {
+  position: absolute;
+  top: 90px;
+  left: 0;
+  bottom: 55px;
+  right: 0;
+  overflow: hidden; }
+  .content .text {
+    width: 100%;
+    outline: none;
+    border: 1px solid #eee; }
+  .content .article-title, .content .article-tag {
+    box-sizing: border-box; }
+  .content .article-title {
+    height: 40px;
+    line-height: 40px;
+    border-radius: 3px;
+    font-size: 18px;
+    padding: 0 15px; }
+  .content .article-tag {
+    height: 25px;
+    line-height: 25px;
+    border-radius: 2px;
+    font-size: 12px;
+    padding: 0 5px; }
+  .content .article-content {
+    width: 100%;
+    height: 100%; }
+    .content .article-content .editor, .content .article-content .previewer {
+      width: 50%;
+      height: 100%;
+      overflow-x: hidden;
+      overflow-y: auto;
+      box-sizing: border-box;
+      border: 1px solid #eee; }
+    .content .article-content .editor {
+      outline: none;
+      resize: none;
+      padding: 10px;
+      border-right: none;
+      font-size: 14px; }
+  .content .article-option {
+    height: 55px; }
 
 .footer {
-  height: 60px; }
+  border-top: 1px solid #eee;
+  height: 55px;
+  position: absolute;
+  bottom: 0;
+  left: 0; }
+  .footer .copyright {
+    font-size: 12px;
+    text-align: center; }
