--- a/blog/back/styles/login.css
+++ b/blog/back/styles/login.css
@@ -150,34 +150,49 @@ ul, ol, li {
 .pt_20 {
   padding-top: 20px; }
 
-/* page styles*/
+/* btn*/
+.btn {
+  display: block;
+  text-align: center;
+  outline: none;
+  border: none;
+  color: #fff; }
+
 /** main*/
 html, body {
   width: 100%;
   height: 100%;
-  overflow: hidden; }
+  overflow-x: hidden; }
 
 body {
   color: #444;
   line-height: 1.7;
-  font-family: Verdana, Arial, Sans-Serif; }
+  font-family: Verdana, Arial, Sans-Serif;
+  background: #eee; }
 
-a {
-  text-decoration: none;
-  color: #444; }
-  a:visited {
-    text-decoration: none; }
-  a:hover, a:active, a:focus {
-    color: #333;
-    text-decoration: none; }
-
-.container {
-  width: 100%;
-  height: 100%;
-  overflow: hidden; }
-  .container .content {
-    margin: 10% auto;
-    width: 80%;
-    height: 80%;
-    border: 1px solid #eee;
-    transform: translateY(-10%); }
+.main {
+  width: 350px;
+  border: 1px solid #eee;
+  border-radius: 10px;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%); }
+  .main .description {
+    text-align: center; }
+  .main .login-form .username, .main .login-form .password, .main .login-form .submit {
+    width: 100%;
+    margin-top: 20px; }
+  .main .login-form .username .text, .main .login-form .password .text, .main .login-form .submit .btn-login {
+    width: 100%;
+    height: 45px;
+    line-height: 45px;
+    padding: 0 15px;
+    font-size: 18px;
+    border-radius: 5px;
+    box-sizing: border-box; }
+  .main .login-form .username .text, .main .login-form .password .text {
+    outline: none;
+    border: 1px solid #eee; }
+  .main .login-form .submit .btn-login {
+    background: #00BE9C; }
