--- a/blog/back/styles/sass/style.scss
+++ b/blog/back/styles/sass/style.scss
@@ -30,18 +30,119 @@ a {
 	}
 }
 
+.trans-link {
+	display: inline-block;
+	-webkit-transition-duration: 0.3s;
+	transition-duration: 0.3s;
+	-webkit-transition-property: transform;
+	transition-property: transform;
+	-webkit-transform: translateZ(0);
+	transform: translateZ(0);
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+	
+	&:hover, &:focus, &:active {
+		transform: scale(1.1) rotate(5deg);
+		-webkit-transform: scale(1.1) rotate(5deg);
+	}
+}
 .container {
 	margin:0 auto;
 }
 
-.header, .content, .footer {
-	width: 1150px;
+.header,.content,.footer {
+	width:1150px;
 }
 
 .header {
-	height: 60px;
+	border-bottom: 1px solid #{$c_eee};
+	height: 90px;
+	line-height: 90px;
+	
+	.logo {
+		margin-left: 20px;
+		font-weight: normal;
+	}
+	
+	.nav {
+		
+		margin-right: 90px;
+		
+		.nav-link {
+			display: inline-block;
+		}
+	}
 }
 
+.content {
+	
+	position: absolute;
+	top:90px;
+	left: 0;
+	bottom: 55px;
+	right: 0;
+	overflow: hidden;
+	
+	.text {
+		width: 100%;	
+		outline: none;
+		border:1px solid #{$c_eee};
+	}
+	
+	.article-title,.article-tag {		
+		box-sizing: border-box;
+	}
+	.article-title {
+		height: 40px;
+		line-height: 40px;
+		border-radius: 3px;		
+		font-size: 18px;
+		padding:0 15px;
+	}
+	
+	.article-tag {
+		height: 25px;
+		line-height: 25px;
+		border-radius: 2px;		
+		font-size: 12px;
+		padding:0 5px;
+	}
+	
+	.article-content {
+		
+		width: 100%;
+		height: 100%;
+		
+		.editor,.previewer {
+			width: 50%;
+			height: 100%;
+			overflow-x: hidden;
+			overflow-y: auto;
+			box-sizing: border-box;
+			border: 1px solid #{$c_eee};
+		}
+		
+		.editor{
+			outline: none;
+			resize: none;
+			padding:10px;
+			border-right: none;
+			font-size: 14px;
+		}
+	}
+	
+	.article-option {
+		height: 55px;
+	}
+}
 .footer {
-	height: 60px;
+	border-top: 1px solid #{$c_eee};
+	height: 55px;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	
+	.copyright {
+		font-size: 12px;
+		text-align: center;
+	}
 }
