--- a/blog/front/styles/sass/style.scss
+++ b/blog/front/styles/sass/style.scss
@@ -83,6 +83,7 @@ a {
 		width: 75%;
 		
 		.post {
+			clear:both;
 			
 			.post-title {
 				font-weight: normal;
@@ -121,7 +122,7 @@ a {
 		width:25%;
 		
 		.category {
-			margin-top:40px;
+			margin-top:20px;
 			padding-left: 40px;
 			
 			.category-title {
